[package]
name = "hazarc"
version = "0.1.0"
edition = "2024"
license = "MIT OR Apache-2.0"
repository = "https://github.com/wyfo/hazarc"
readme = "README.md"
keywords = ["atomic", "arc", "cache", "no_std"]
categories = ["concurrency", "data-structures", "memory-management", "caching", "no-std"]
description = "Wait-free AtomicArc"

[features]
default = ["default-domain"]
default-domain = []
pthread-domain = ["dep:libc"]

[dependencies]
crossbeam-utils = "0.8"
libc = { version = "0.2", optional = true }

[dev-dependencies]
arc-swap = "1.8.0"
divan = "0.1.21"

[lib]
bench = false

[[bench]]
name = "comparison"
harness = false
required-features = ["default-domain"]

[lints.rust]
missing_debug_implementations = "forbid"
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(hazarc_force_active_writer_count_64bit)'] }

[lints.clippy]
semicolon_if_nothing_returned = "forbid"