[package]
name = "hazarc"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/wyfo/hazarc"
readme = "README.md"
keywords = ["atomic", "arc", "cache", "no_std"]
categories = ["concurrency", "data-structures", "memory-management", "caching", "no-std"]
description = "Wait-free AtomicArc"
rust-version = "1.65"

[features]
default = ["default-domain"]
default-domain = []
pthread-domain = ["libc"]

[dependencies]
crossbeam-utils = "0.8"
libc = { version = "0.2", optional = true }

[dev-dependencies]
arc-swap = "1.8.0"
divan = "0.1.21"

[lib]
bench = false

[[bench]]
name = "comparison"
harness = false
required-features = ["default-domain"]

[lints.rust]
missing_debug_implementations = "forbid"
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(hazarc_force_active_writer_count_64bit)'] }
unsafe_op_in_unsafe_fn = "deny"

[lints.clippy]
dbg_macro = "forbid"
incompatible_msrv = "allow"
semicolon_if_nothing_returned = "forbid"
